# Simplay-Player

./: .gitignore  README.md  player.py  pyproject.toml
i18n/: lang.py
lib/: work.py
pages/: settingsPage.py
